--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,4 @@
 /* CSS */
-body {
-  background-color: #f1f0ee;
-}
 
 .button-52 {
   font-size: 16px;
@@ -50,7 +47,30 @@ body {
 }
 
 #today {
-  background-color: rgb(224, 236, 220);
+  background-color: rgb(186, 239, 250);
   padding: 10px;
   border-radius: 2px;
+}
+
+#forecast {
+  background-color: rgb(240, 184, 247);
+  padding: 10px;
+  border-radius: 2px;
+}
+
+.forecast-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.day-container {
+  border: 1px solid #ccc;
+  padding: 10px;
+  flex: 1;
+  min-width: 200px;
+}
+
+.hourly-forecast {
+  margin-top: 10px;
 }
